@@ -2,12 +2,14 @@
 {% block nav_rangliste %}selected{% endblock %}
 {% load sasse %}
 {% block content %}
-<p><b>Beste Sektion</b> (<small><a target="_blank" href="{% url 'sektionsfahren_rangliste_pdf' wettkampf.jahr wettkampf.name %}">PDF</a></small>)
+<p><b>Beste Sektion</b>
 | <a href="{% url 'sektionsfahren_rangliste_gruppe' wettkampf.jahr wettkampf.name %}">Beste Gruppe</a>
 | <a href="{% url 'sektionsfahren_rangliste_schiff' wettkampf.jahr wettkampf.name %}">Bestes Schiff</a>
 | <a href="{% url 'richtzeiten' wettkampf.jahr wettkampf.name disziplin.name %}">Richtzeiten</a>
 | <a href="{% url 'sektionsfahren_kranzlimiten' wettkampf.jahr wettkampf.name %}">Kranzlimiten</a>
 </p>
+<p>PDF: <a target="_blank" href="{% url 'sektionsfahren_rangliste_pdf' wettkampf.jahr wettkampf.name %}">Rangliste</a>
+| <a target="_blank" href="{% url 'sektionsfahren_notenblatt_pdf_all' wettkampf.jahr wettkampf.name %}">Alle Notenblätter</a></p>
 <table class="list">
   <tr>
     <th>Kranz</th>
