@@ -1,5 +1,7 @@
 Unreleased
 
+- Sektionsfahren: Notenblätter aller Sektionen mit einem Click drucken.
+
 - Fix: Im Sektionsfahren werden die Punkte wieder mit 3 Stellen nach dem Komma
   dargestellt. Mit Version 3.2.3 (93a6a46d167db93db49e9b146aa5e042d6a47739)
   sollte einfach das Dezimaltrennzeichen ',' durch '.' ersetzt werden. Dabei
